@@ -1,3 +1,6 @@
+* allow_mass_assignment_of when called without arguments checks if any mass
+  assignment is possible [#80]
+
 * Add :table_name option to have_index (thanks to Lawrence Pit) [#79]
 
 * Allow default subject attributes to be given [#74]
